--- a/background.qmd
+++ b/background.qmd
@@ -20,7 +20,7 @@ You may edit, combine, or remove any or all of the existing text as you see fit 
 
 If your account is for a species that was never covered by BNA or NB, the original HBW text will have been imported into the more comprehensive BNA/NB structure. When HBW text is present, it will have been imported into the first section of the page to which it correlates. Some of this text will likely be more appropriate in other sections or subsections, so we ask that you parse out whatever you choose to use into the most germane sections and subsections throughout the account (see [Appendix 2](https://birds-of-the-world.github.io/birds-of-the-world/app2.html)). The HBW text may also include hyperlinks to images or other media originally from the Internet Bird Collection (or elsewhere). If these links are still functional, you may leave them in or remove them as you see fit. Please remove any broken links.
 
-Please note, **primary sources (i.e., the original published sources of information, often academic journal articles) are always preferred**, and contributors should review original literature on the species to expand on, or replace, text from the above secondary sources (i.e., sources that contain information originally published elsewhere) to attain the appropriate level of detail in the account. Text originally derived from the HBW source project frequently did not contain references within the text. You should review the references (including the Additional References, which will contain HBW citations that are not referenced in the text) on the References page and, when possible and useful, ensure that those references are cited throughout the account’s text. See @sec-content for further details on sources.
+Please note, **primary sources (i.e., the original published sources of information, often academic journal articles) are always preferred**, and contributors should review original literature on the species to expand on, or replace, text from the above secondary sources (i.e., sources that contain information originally published elsewhere) to attain the appropriate level of detail in the account. Text originally derived from the HBW source project frequently did not contain references within the text. You should review the references (including the Additional References, which will contain HBW citations that are not referenced in the text) on the References page and, when possible and useful, ensure that those references are cited throughout the account’s text. See [Account Content](https://birds-of-the-world.github.io/birds-of-the-world/content.html) for further details on sources.
 
 ## Full and Partial Revisions {#sec-background-full}
 
