Corrected Appendix 1 formatting

--- a/app1.qmd
+++ b/app1.qmd
@@ -81,4 +81,4 @@ Contributors have three options regarding specialized content: 
 
 On occasion, there may be an immediate need to revise certain parts of an account within a strict time frame (e.g., during BOW’s annual taxonomic update or if a species’ conservation status changes). These changes may result in a version change. Typically, BOW staff will make the required changes themselves or ask a contributor to do so, but smaller changes, like common name changes, may happen automatically. While active contributors will be notified of any significant content changes that are needed or planned, they may not be informed of minor taxonomic alignments with the eBird/Clements Checklist, such as changes to subspecies or genus-level changes.
 
-Suitable contributors and/or subject-matter experts who are not involved in a revision a priori may be invited to review accounts before publication at the discretion of BOW staff. Contributors may request external review but cannot prevent it if deemed necessary by editors. Reviewers will be acknowledged in Revision Notes and will submit feedback via a Word document or email, making direct edits only with mutual agreement of BOW staff and the relevant contributors.
+Suitable contributors and/or subject-matter experts who are not involved in a revision *a priori* may be invited to review accounts before publication at the discretion of BOW staff. Contributors may request external review but cannot prevent it if deemed necessary by editors. Reviewers will be acknowledged in Revision Notes and will submit feedback via a Word document or email, making direct edits only with mutual agreement of BOW staff and the relevant contributors.
