--- a/app2.qmd
+++ b/app2.qmd
@@ -6,7 +6,9 @@ editor_options:
 
 # Appendix 2: Standard Account Pages, Sections, and Subsections {#sec-app2 .unnumbered}
 
-xxx
+Shown below are the pages (purple), sections (blue), and subsections (black) that should appear in most or all accounts in the order in which they should occur. Note that, as science has evolved, we have added new sections and subsections that we would like to see included in all accounts. Contributors should use the list below as a guide to what to include when completing a revision, as the account’s structure may have changed recently.
+
+As discussed in the @sec-content-structure section, contributors have some flexibility in including, or sometimes excluding, certain subsections and, more rarely, sections, depending on the biology of their species and what information is available. The order in which material appears below must be retained, however. Guidance on what specific information should appear in the various pages and sections appears in [Appendix 3](https://birds-of-the-world.github.io/birds-of-the-world/app3.html).
 
 ## [INTRODUCTION]{style="color:purple;"} {#sec-app2-intro}
 
