Addition to Appendix 4

--- a/app4.qmd
+++ b/app4.qmd
@@ -388,6 +388,7 @@ The list below indicates the spelling, capitalization, and hyphenation (or lack 
 -   resight
 -   reuse
 -   revisor
+-   ridgeline
 -   right-hand
 -   riverbank
 -   riverbed
