--- a/checklist.qmd
+++ b/checklist.qmd
@@ -58,7 +58,7 @@ Before submitting the Draft Completion Form ([English](https://forms.gle/e6uTR5E
 
 -   Finalize a suggested author order (to be specified on the Draft Completion Form).
 
--   Verify that all contributors have recently (within the last two years) signed and submitted a Contributor Agreement to BOW staff.
+-   Verify that all contributors have recently (within the last two years) signed and submitted a [Contributor Agreement](https://drive.google.com/file/d/1Arz8mqAamqQFlIfV2zNJFQbbB5Y0D4Ug/view?usp=sharing) to BOW staff.
 
 -   Fill out and submit the Draft Completion Form.
 
@@ -114,6 +114,6 @@ Antes de enviar el Formulario de finalización del primer borrador de ficha BOW 
 
 -   Finaliza el orden sugerido de la autoría (el cual será especificado en el Formulario).
 
--   Verifica que todos los autores y autoras hayan enviado de forma reciente (en los últimos dos años) el acuerdo de contribución a Birds of the World.
+-   Verifica que todos los autores y autoras hayan enviado de forma reciente (en los últimos dos años) el [acuerdo de contribución](https://drive.google.com/file/d/1Arz8mqAamqQFlIfV2zNJFQbbB5Y0D4Ug/view?usp=sharing) a Birds of the World.
 
 -   Rellenar y enviar el Formulario de finalización del primer borrador de ficha BOW.
