--- a/app7.qmd
+++ b/app7.qmd
@@ -6,7 +6,11 @@ editor_options:
 
 # Appendix 7: Media Policies and Procedures {#sec-app7 .unnumbered}
 
-x
+Media galleries will be added to your revision by *Birds of the World* (BOW) staff. We suggest that you look over some examples of recently published BOW accounts to get a good sense of how media galleries, titles, and captions are typically composed.
+
+You can review your account’s older media in the “live” version of the account (i.e., **not** the “draft” version of your account). The draft version of your account may have “placeholder” galleries on pages where images and figures will appear. Once your account goes into the Editor Review phase, BOW staff will populate the account with semifinal media and associated captions, which you will be able to review during the Author Review period.
+
+**Instructions for specific types of media are below. It is assumed that you have read and agree to abide by these policies before you begin your BOW revision.**
 
 ## Figures {#sec-intro-figures}
 
