Update to Appendix 7
Museum specimens

--- a/app7.qmd
+++ b/app7.qmd
@@ -55,6 +55,8 @@ Using these two protocols, it is fine to enter older media and to keep your chec
 
 Similarly, it is fine (and encouraged!) for BOW authors to submit habitat images or other sorts of media that are atypical for eBird. You can now submit [checklist-level media](https://support.ebird.org/en/support/solutions/articles/48001269559-upload-checklist-media), including habitat photos that do not include birds, to an eBird list. Habitat photos should be tagged with birds observed in that habitat, which allows users to search for such photos in the Macaulay Library by clicking the “Habitat/Soundscape” button above the search bar. You can also search for habitat photos by location. If you have an image that *does* include the bird but primarily showcases the habitat rather than the bird itself, please upload it to your eBird checklist under the relevant bird species and use the “Habitat” tag. Photos of birds in the hand can also be uploaded to an eBird checklist under the relevant species; please use the “In-hand” tag to make these images easier to find.
 
+**Note:** If you would like to use photos of museum specimens in a BOW account, these should not be uploaded to eBird. Please contact Maria Smith ([mgs248\@cornell.edu](mailto:mgs248@cornell.edu)) for information on how to have these images added to the account as figures.
+
 Upload your photos at their original resolution, whenever possible. eBird accepts images up to 10 MB in size, and each species on a checklist can accept 10 images. **Please do not include watermarks on your images.**
 
 Once you have uploaded your images, please provide the eBird checklist and/or Macaulay Library asset numbers (e.g., ML36340541), as well as a Word document with titles and captions for each image to be included (material must be received no later than one month prior to publication of the account). You can upload this information to the Draft Completion Form ([English](https://forms.gle/e6uTR5E8Z5aXXc9n6), [Spanish](https://forms.gle/4e3PifYqvKrbQ1tV8)) or send it to Maria Smith ([mgs248\@cornell.edu](mailto:mgs248@cornell.edu)). Please see recently published accounts for examples of the format and content of image titles and captions.
